--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EMAILJS_PUBLIC_KEY = "eKcV2o9NIW5mpa-L0"
-EMAILJS_TEMPLATE_ID = "template_73u50cb"
-EMAILJS_SERVICE_ID =  "default_service"
+VITE_EMAILJS_PUBLIC_KEY = "eKcV2o9NIW5mpa-L0"
+VITE_EMAILJS_TEMPLATE_ID = "template_73u50cb"
+VITE_EMAILJS_SERVICE_ID =  "default_service"
